<resources>
    <string name="app_name">The Rehab</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">597152227417864</string>
    <string name="fb_login_protocol_scheme">fb597152227417864</string>
    <string name="welcome_slogan">When I become we, illness becomes wellness</string>
    <string name="introduction">Welcome to THE REHAB, A virtual platform which serves to help create daily structure through commitment and meditation.</string>
    <string name="sub_introduction">THE REHAB grants you access to a variety of highly qualified professionals whose primary goal is to help you cope and manage day to day life and Address deeper issues.</string>
    <string name="sub_introduction2">We work independently and alongside clinical centers to support and rehabilitate sufferers with mental health conditions.</string>
    <string name="sub_introduction3">A support system ,that is easily accessible just a few clicks away.</string>
    <string name="questionaire_string">Select one of the below questionnaires to assess whether you may be suffering  from any of the mental disorders</string>
    <string name="depression_note">You seem to have symptoms that could resemble depression. Please note the following information</string>
    <string name="depression_note2">This questionnaire is not a diagnosis and can not tell you if you have this disorder. The questionnaire only shows symptoms that may appear with this disorder. This questionnaire has no significance, whether you suffer from this disorder or not. Only a specialist or psychologist can make a reliable diagnosis.</string>
    <string name="depression_note1">You show little or no symptoms of depression. Please note the following information</string>
    <string name="depression_note12">This questionnaire is not a diagnosis and can not tell you if you have this disorder. The questionnaire only shows symptoms that may appear with this disorder. This questionnaire has no significance, whether you suffer from this disorder or not. Only a specialist or psychologist can make a reliable diagnosis.</string>
    <string name="depression">Major depressive disorder is a common and serious medical illness that negatively affects how you feel, the way you think and how you act. fortunately, it is also treatable.</string>
    <string name="addiction_note">You seem to have symptoms that could resemble addiction. Please note the following information</string>
    <string name="anxiety_note">You seem to have symptoms that could resemble anxiety. Please note the following information</string>
    <string name="eating_disorder_note">You seem to have symptoms that could resemble eating disorder. Please note the following information</string>
    <string name="eating_disorder">Eating disorders are a range of conditions characterized by abnormal or irregular eating habits and severe distress about body weight, size or shape.</string>
    <string name="addiction">Addiction is the psychological and physical inability to stop a particular substance or activity, despite dire consequences such as psychological and physical harm</string>
    <string name="anxiety">An action characterized by feelings of tension , worried thoughts and physical changes like increased blood pressure.</string>
    <string name="paragraph_1">Thank you so much for subscribing to our application. We truly appreciate your support and interest. If you have any questions about THE REHAB please select our feedback page.</string>
    <string name="paragraph_2">Our primary goal is to provide you with the best mental health care possible which is easy and efficient.</string>
    <string name="paragraph_3">If you like to continue with the service that we provide , please click on the sign up below. Or if you do not wish to at this present tome please click on the exit tab. We look forward tp continuing A relationship with you in the future.</string>
    <string name="paragraph_4">Thank you again for subscribing to THE REHAB.</string>
    <string name="paragraph_5">Kind Regards:</string>
    <string name="paragraph_6">THE REHAB</string>
    <string name="about_string">THE REHAB and the REHAB CENTERS are teams of professional and qualified members who play an important role in assisting you or a loved one (clients) in getting through your treatment process.</string>
    <string name="about_string_2">We have qualified therapists and psychologists that will be assigned to help you with your recovery.</string>
    <string name="about_string_3">Our programme is for clients with mental health issues who suffer from the following disorders Anxiety, Depression ,Addiction and Eating Disorders.</string>
    <string name="about_string_4">Outpatient treatment is Mental Health sufferers and substance abuse rehabilitation that doesn\'t disrupt your daily life</string>
    <string name="about_string_5">The Outpatient program is great for you when you\'ve got day to day responsibilities, you can login to THE REHAB at anytime you need. The Outpatient program is also great for when you have come out of a clinic that can be used as a step down programme to help you with your recovery.</string>
    <string name="about_string_6">As an outpatient you would still need to have structure in your day to day life and we will help you with a routine that works for you and will fit in with a regular and consistent time frame.</string>
    <string name="about_string_7">We will be there to hel and guide you during the hard and difficult times, whilst you continue with your day to day activities.</string>
    <string name="about_string_8">Our mental health and substance abuse sufferers can count on our teams for support and understanding.</string>
    <string name="about_string_9">Outside support from peers, family and AA/NA group meetings within a community for support, strength and encouragement on your journey.</string>
    <string name="about_string_10">You as an outpatient would need to be committed to the programme without supervision, as you are not supervised inside a treatment center. Outpatient treatment works with a healthy support system with a 2 step programme for your recovery.</string>
    <string name="about_string_11">THE REHAB is here for you , if your disorder is manageable outside of a clinic with outpatient treatment. However if you cannot manage your symptoms then you will have to start as an impatient before you join outpatient programme.</string>
    <string name="about_string_12">We at THE REHAB value you as an individual , putting your life ahead is what matters to us. Your health and well-being to be restored to live your life. </string>
    <string name="about_string_13">THE REHAB shares inspirational chats and quotes with our , for inspiring motivation of healing within oneself.</string>
    <string name="about_string_14">We give you live video chats, with qualified professional Therapist and psychologist for your sessions.</string>
    <string name="home_string">We are dedicated to providing the best possible care with our outpatient treatment programme</string>
    <string name="home_string_1">"Our aim is to help mental health suffer all over the world, and build awareness all around. People in today's society would understand more about disorders and would seek help from young ages."</string>
    <string name="home_string_2">This programme is to help make the change in your life, with your strength and our guidance we will fight for a better future.</string>
    <string name="fingertips_string">We are here to give you a great and easy significance structure with helping to remove stigma and build awareness around the world</string>
    <string name="fingertips_string_2">"People would be helped in today's society from a young age and they would be more understanding of mental health disorders. This programme opens yout doors to a better future , together wwe will make that change."</string>
    <string name="title_activity_bottom_nav_view">bottom_nav_view</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="footer_string">Privacy Policy - Clients/Patients Privacy Policy - Data Retention Policy - Health Care Policy - Medical Policy - Sage Pay Policy - Application Policy - Google</string>
    <string name="pack_1_info_heading">3 WEEKS TO PRIMARY RECOVERY</string>
    <string name="pack_1_info">The package offers you an intense 3 weeks of therapeutic sessions, lectures and support to manage yourself abilities doing step work 1, 2 and 3 of the 2 step program.</string>
    <string name="pack_2_info">This package offers you an intense 4 weeks of therapeutic sessions, lectures and support to manage yourself abilities. Have a sponsor working with you and building a solid recovery foundation.</string>
    <string name="pack_3_info">This package offers you a full 12 step program of therapy, lectures, connecting and activity to boost and stimulate your body and mind.</string>
    <string name="dummy_message">Hi, this is a dummy message to test the ui.Regards Hi, this is a dummy message to test the ui.Regards Hi, this is a dummy message to test the ui.Regards Hi, this is a dummy message to test the ui.Regards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courage_hope">Courage And Hope</string>
    <string name="home_string_24">We want to inform society about mental disorders so that they can identify the red flags and therefore seek help earlier than later</string>
    <string name="feedback_string">Outpatient programme has helped me in some of my hardest times, being able to share my story and having the support of an outpatient gave me hope knowing im not alone.</string>
    <string name="jacque_testimony">I will forever be thankful because what outpatient has given me is a second chance to life so i can be with with my family again and I could never be more happy and blessed than what I am now.</string>
    <string name="kim_string">I am so grateful for the outpatient programme and to have the people that care and support me through it all. Depression is not an easy road to be on but having my loved ones and the team support has really been my stepping stone </string>
    <string name="default_notification_channel_id">This is my default channel</string>
</resources>