<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/header"
            android:background="@drawable/header_image">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:elevation="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/logo"
                android:layout_centerHorizontal="true"
                android:text="THE REHAB"
                android:fontFamily="@font/yantramanav"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_marginLeft="30dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dear: Sir / Madam"
                android:fontFamily="@font/yantramanav"
                android:textColor="@android:color/black"
                android:paddingLeft="15dp"
                android:textSize="15dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/sub_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:fontFamily="@font/yantramanav"
                android:text="@string/paragraph_1"
                android:textColor="@android:color/black"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/sub_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/paragraph_2"
                android:fontFamily="@font/yantramanav"
                android:textColor="@android:color/black"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/sub_text_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:fontFamily="@font/yantramanav"
                android:text="@string/paragraph_3"
                android:textColor="@android:color/black"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/sub_text_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/paragraph_4"
                android:fontFamily="@font/yantramanav"
                android:textColor="@android:color/black"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/sub_text_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/paragraph_5"
                android:fontFamily="@font/yantramanav"
                android:textColor="@android:color/black"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>

            <TextView
                android:id="@+id/sub_text_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:fontFamily="@font/yantramanav"
                android:text="@string/paragraph_6"
                android:textColor="@android:color/black"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp">

                <Button
                    android:id="@+id/exit_btn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="exit"
                    android:fontFamily="@font/yantramanav"
                    android:textColor="@android:color/black"
                    android:background="@drawable/exit_btn_border"/>

                <Button
                    android:id="@+id/signUp_btn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="Sign Up"
                    android:fontFamily="@font/yantramanav"
                    android:layout_toRightOf="@id/exit_btn"
                    android:layout_marginLeft="15dp"
                    android:textColor="@android:color/black"
                    android:background="@drawable/sign_up_btn_border"/>

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>