<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/header"
        android:background="@drawable/header_image">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:elevation="20dp"/>

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/logo"
            android:layout_centerHorizontal="true"
            android:text="THE REHAB"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/logo"
            android:layout_below="@+id/title_view"
            android:textSize="12dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:text="When I become we , illness becomes wellness"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:id="@+id/introduction_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INTRODUCTION"
        android:fontFamily="@font/yantramanavregular"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="30dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/introduction_string"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/introduction"
        android:textSize="18dp"
        android:fontFamily="@font/yantramanavregular"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/introduction_string_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sub_introduction"
        android:textSize="18dp"
        android:fontFamily="@font/yantramanavregular"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/introduction_string_3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sub_introduction2"
        android:textSize="18dp"
        android:fontFamily="@font/yantramanavregular"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/introduction_string_4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sub_introduction3"
        android:textSize="18dp"
        android:fontFamily="@font/yantramanavregular"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="NEXT"
        android:fontFamily="@font/yantramanav"
        android:textColor="@android:color/white"
        android:background="@drawable/buttonselector"
        android:backgroundTint="@color/btn_green"
        android:elevation="20dp"
        android:textStyle="bold"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>