<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:elevation="20dp"/>

        <ImageView
            android:src="@drawable/header_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
            android:id="@+id/heading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="ABOUT"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="25dp"/>

            <Space
            android:id="@+id/space_1"
            android:layout_below="@+id/heading_view_3"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

            <TextView
                android:id="@+id/about_view"
                android:layout_below="@+id/space_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_string"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <Space
                android:id="@+id/space_2"
                android:layout_below="@+id/about_view"
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/about_view_2"
                android:layout_below="@+id/space_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_string_2"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <Space
                android:id="@+id/space_3"
                android:layout_below="@+id/about_view_2"
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <ImageView
                android:id="@+id/my_img"
                android:layout_below="@+id/space_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/about_pic"/>

            <Space
            android:id="@+id/space_4"
            android:layout_below="@+id/my_img"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

            <TextView
                android:id="@+id/about_view_3"
                android:layout_below="@+id/space_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_string_3"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <Space
                android:id="@+id/space_5"
                android:layout_below="@+id/about_view_3"
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/about_view_4"
                android:layout_below="@+id/space_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_string_4"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <Space
                android:id="@+id/space_6"
                android:layout_below="@+id/about_view_4"
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/heading_view_2"
                android:layout_below="@+id/space_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OUTPATIENT PROGRAMME"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

    </RelativeLayout>

    </ScrollView>

</LinearLayout>
