<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_background">

        <Space android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mental Health"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/view_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Treatment and Recovery"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:id="@+id/view_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_string"
            android:textSize="16dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/view_text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Daily Meditation Quote"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/quote_image"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:id="@+id/view_text_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The Rehab is at your fingertips"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:id="@+id/view_text_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_string_1"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:id="@+id/view_text_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_string_2"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

    </LinearLayout>

</ScrollView>